# braid

./: .env.example  .gitignore  AGENT_DEVELOPMENT_BEST_PRACTICES.md  CLAUDE.md  CLAUDE_4_MODELS.md  CLAUDE_AGENT_DEVELOPMENT_ROADMAP.md  CLI_USAGE.md  DEPLOYMENT.md  Dockerfile  EXAMPLE_AGENT_CREATION.md  LIVE_API_INTEGRATION_CHECKLIST.md  PRODUCTION_MCP_SUMMARY.md  QUICK_START.md  README.md  Roadmap.md  XERO_API_INTEGRATION_GUIDE.md  activate_n8n_workflows.py  agent-creator-template.md  authenticate_gworkspace.py  configure_librechat.py  import_n8n_workflows.py  langgraph.db  langgraph.db-shm  langgraph.db-wal  librechat.yaml  pyproject.toml  railway.toml  requirements.txt  setup_librechat_complete.py  setup_n8n_integration.sh  setup_postgres_direct.py  setup_supabase.py  setup_supabase_api.py  supabase_setup_manual.sql  test_documentation.py  test_ms365_auth.py  update_integrations_claude4.sql
agent-examples/daily-standup-coordinator/: simple_test.py
agent-examples/sales-intelligence-agent/: agent.py  sales_agent.py
agents/accounts-receivable-clerk/: README.md  agent.py  collections_tools.py  contract_tools.py  demo_collections.py  demo_test.py  demo_voice_call.py  google_drive_tools.py  refresh_xero_token.py  requirements.txt  standalone_agent.py  test_agent.py  test_live_integration.py  xero_ar_tools.py  xero_tools.py
agents/daily-standup-coordinator/: agent.py  requirements.txt  test_agent.py
agents/financial-operations-assistant/: README.md  WORKING_SOLUTION_SUMMARY.md  agent.py  refresh_xero_tokens.py  requirements.txt
agents/internal_comms_assistant/: graph.py
agents/mural-content-assistant/: .env.example  AGENT_STATUS.md  README.md  agent.py  demo_test.py  get_workspace_info.py  mural_tools.py  oauth_setup.py  requirements.txt  test_api_endpoints.py  test_setup.py
agents/onboarding-knowledge-expert/: README.md  agent.py  knowledge_tools.py  onboarding_tools.py  requirements.txt
agents/productivity_assistant/: graph.py
agents/project_kickoff_coordinator/: agent.py  interactive_test.py  test_agent.py
agents/sales-intelligence-agent/: requirements.txt  test_sales_intelligence.py
agents/slack-bot-test/: quick_test.py
agents/slack_test_agent/: main.py
agents/stock_recommender/: __init__.py  graph.py  main.py  tools.py
agents/top_gainer/: __init__.py  __main__.py  graph.py
api-file-tester/: agent.py  post_data.txt  requirements.txt  test_agent.py  test_output.txt  test_tools.py
api-file-tester/test_data/: braid_test_file.txt  sample_data.csv
api-file-tester/tools/: files_tools.py
braid/: librechat_adapter.py  server.py
braid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
braid/cli/: main.py
braid/database/: supabase_client.py
core/: memory.py
core/integrations/: README.md  __init__.py
core/mcp/: discovery.py  health_monitor.py  integration.py
cursor-xero-test/: README.md  requirements.txt  setup_database.py  test_agent_with_real_data.py  test_full_agent.py  test_notion_connection.py  test_real_data_agent.py
cursor-xero-test/archive_test_files/: SETUP_REAL_XERO.md  final_integration_test.py  fix_xero_redirect.md  fix_xero_setup.py  get_demo_pl_new_app.py  get_fresh_token.py  get_fresh_tokens.py  get_real_xero_data.py  get_tokens.py  get_ytd_pl.py  inspect_api_data.py  parse_pl_xml.py  quick_demo_pl.py  quick_pl_display.py  setup_real_xero.py  setup_real_xero_flexible.py  setup_xero_sdk.py  show_demo_pl.py  show_pl_response.py  simple_xero_setup.py  test_current_token.py  test_different_ports.py  test_forecast_calculation.py  test_new_xero.py  test_pl_data.py  test_pl_port3000.py  (+3 more)
daily-standup-coordinator/: test_working_agent.py
database/: supabase_schema.sql
docker/: docker-compose.mcp.yml
docs/: CLEANUP_SUMMARY.md  README.md
financial-forecast-agent/: .env.example  Dockerfile.production  LOCAL_SETUP_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  README.md  create_live_notion_page.py  demo.py  deploy-production.sh  docker-compose.mcp.yml  docker-compose.production.yml  financial_forecast_Northeast_Logistics_Co_537bf355.md  mcp-client-config.json  run_langsmith_fixed.py  run_langsmith_properly_fixed.py  run_production.py  run_production_live.py  run_production_with_real_notion.py  run_simple_mcp_test.py  run_simulation.py  start-mcp-servers.sh  test_langgraph.py  test_local_setup.sh  test_real_mcp.py  test_workflow.py  xero_oauth_setup.py
financial-forecast-agent-mcp/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  agent.py  agent_direct.py  config.py  debug_perplexity.py  enhanced_agent.py  requirements.txt  setup_mcp_servers.sh  test_agent.py  test_enhanced_workflow.py  test_forecast_workflow.py  test_mcp_simple.py  test_perplexity_api.py  test_simple_workflow.py  test_xero_tools.py
full-stack-agent/: .env.example  MCP_INTEGRATION.md
k8s/: mcp-deployment.yaml
langgraph_agent_guide/: 04_advanced_state_management.md  07_deployment.md  08_production_best_practices.md
librechat-config/: librechat.yaml
librechat-service/: Dockerfile.librechat  railway.toml
mcp/: registry.json
mcp-beta/: README.md  build_mcp_images.sh  mcp-client-config.json  mcp-deployment.yaml  mcp-nginx.conf  stop-mcp-servers.sh  test-mcp-setup.py
n8n-workflows/: README.md  braid-agent-manager.json  braid-chat-workflow.json
notion-test-agent/: pyproject.toml  test_notion_mcp.py
recreated_kickoff_agent/: docker-compose.yml  requirements.txt
sales-intelligence-agent-v3/: README.md  docker-compose.yml
scripts/: setup_mcp_servers.sh
slack-bot-test/: agent.py
structure-test/: agent.py  requirements.txt  structure_test.txt  test_new_structure.py
tests/: README.md  mcp_test_framework.py  test_config.json
transform-test/: agent.py  requirements.txt  test_data_transforms.py
workflow-test/: agent.py  requirements.txt  test_new_tools.py  test_organized.txt  test_scores.csv
(+375 files in other folders)
